--- a/tags.html
+++ b/tags.html
@@ -4,22 +4,19 @@ title: Tags
 ---
 
 <div class="tag__list">
-
     {% for tag in site.tags %}
-    
         {% assign t = tag | first %}
-
         <a class="tag__item" href="#{{t}}">{{t}}</a>
-
     {% endfor %}
-
 </div>
 
 {% for tag in site.tags %}
-    <div id="{{tag[0]}}" class='posts-tagged'>
-        <h1 class="tag__title">{{ tag[0] }}</h1>
+    {% assign t = tag | first %}
+    <div id="{{t}}" class='posts-tagged'>
+        <h1 class="tag__title">{{ t }}</h1>
         <div class="post__list">
-            {% for post in tag[1] %}
+            {% assign posts = tag | last %}
+            {% for post in posts %}
                 {% include post-entry.html %}
             {% endfor %}
         </div>
